@@ -1,85 +1,0 @@
-name: msys2-mingw
-
-on:
-  push:
-    branches:
-      - '*'
-    tags-ignore:
-      - '*'
-  pull_request:
-
-env:
-  PERL5LIB: /c/cx/lib/perl5:/c/cx/lib/perl5/MSWin32-x64-multi-thread
-  PERL_LOCAL_LIB_ROOT: c:/cx
-  PERL_MB_OPT: --install_base C:/cx
-  PERL_MM_OPT: INSTALL_BASE=C:/cx
-  ALIEN_BUILD_PLUGIN_PKGCONFIG_COMMANDLINE_TEST: 1 # Test Alien::Build::Plugin::PkgConfig::CommandLine
-
-jobs:
-  perl:
-
-    runs-on: windows-latest
-
-    strategy:
-      fail-fast: false
-
-    defaults:
-      run:
-        shell: msys2 {0}
-
-    steps:
-      - name: Set git to use LF
-        run: |
-          git config --global core.autocrlf false
-          git config --global core.eol lf
-        shell: powershell
-
-      - uses: actions/checkout@v2
-
-      - name: Set up Perl
-        uses: msys2/setup-msys2@v2
-        with:
-          update: true
-          install: >-
-            base-devel
-            mingw-w64-x86_64-toolchain
-            mingw-w64-x86_64-perl
-            mingw-w64-x86_64-libffi
-            mingw-w64-x86_64-libarchive
-
-      - name: perl -V
-        run: |
-          perl -V
-
-      - name: Prepare for cache
-        run: |
-          perl -V > perlversion.txt
-          ls perlversion.txt
-
-      - name: Cache CPAN modules
-        uses: actions/cache@v1
-        with:
-          path: c:\cx
-          key: ${{ runner.os }}-build-msys2-${{ hashFiles('perlversion.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-build-msys2-${{ hashFiles('perlversion.txt') }}
-
-      - name: Install Static Dependencies
-        run: |
-          export PATH="/c/cx/bin:$PATH"
-          yes | cpan App::cpanminus || true
-          cpanm -n Dist::Zilla
-          perl -S dzil authordeps --missing | perl -S cpanm -n
-          perl -S dzil listdeps --missing   | perl -S cpanm -n
-
-      - name: Install Dynamic Dependencies
-        run: |
-          export PATH="/c/cx/bin:$PATH"
-          perl -S dzil run --no-build 'perl -S cpanm --installdeps .'
-
-      - name: Run Tests
-        run: |
-          export PATH="/c/cx/bin:$PATH"
-          perl -S dzil test -v
-        env:
-          ALIEN_BUILD_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
