@@ -22,6 +22,7 @@ $modules{$_} = $_ for qw(
   Test2::V0
   Test::Alien::Build
   URI
+  YAML
 );
 
 
