@@ -1,8 +1,10 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
-  - This plugin now requires Alien::Build of at least 2.39.
+  - This plugin now requires Alien::Build of at least 2.39 (gh#21)
   - Compatability with ALIEN_DOWNLOAD_RULE overrides (gh#18)
+  - You can set ALIEN_BUILD_PLUGIN_DOWNLOAD_GITHUB_DEBUG to get additional
+    diagnostic messages (gh#18)
 
 0.07      2021-05-15 14:28:23 -0600
   - Optionally use GitHub Personall Access Token when specified as
